--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: Dancing-Script, sans-serif;
+    font-family: Dancing-Script;
     src: url("../fonts/DancingScript-VariableFont_wght.ttf");
   }
   
@@ -10,6 +10,7 @@
   
   .lista img {
     width: 155px;
+    height: 240px;
     margin: 1rem 2rem;
     cursor: pointer;
   }
